syntax = "proto2";

package janitor;

message Distribution {
  optional string name = 1;

  optional string archive_mirror_uri = 2;

  optional string signed_by = 11;

  // Chroot name to use in sbuild
  optional string chroot = 5;

  repeated string chroot_alias = 12;

  repeated string component = 4;

  optional string lintian_profile = 6;

  repeated string lintian_suppress_tag = 8;

  optional string build_command = 7;

  optional string vendor = 9;

  repeated string extra = 10;
}

message Config {
  // Logs storage location
  optional string logs_location = 2;

  // Database location; must be a valid PostgreSQL URL
  optional string database_location = 4;

  // Default committer to use when committing changes
  optional string committer = 5;

  // Debian distribution
  repeated Distribution distribution = 7;

  // Origin in published archives
  optional string origin = 8;

  // OAuth authorization, OpenID authentication
  optional OAuth2Provider oauth2_provider = 9;

  // Artifact location: used to store build results
  optional string artifact_location = 10;

  // Zipkin server location
  optional string zipkin_address = 12;

  // Janitor campaigns
  repeated Campaign campaign = 13;

  // Git VCS (git-store) storage location
  optional string git_location = 14;

  // Bazaar VCS (bzr-store) storage location
  optional string bzr_location = 15;

  // Redis location; must be a valid Redis URL
  optional string redis_location = 16;

  // User-agent string when making a connection
  optional string user_agent = 18;

  // Default bugtracker to file bug tickets
  repeated BugTracker bugtracker = 17;

  // Provide apt archives
  repeated AptRepository apt_repository = 19;
}

message MergeProposalConfig {
   optional int32 value_threshold = 1;

   optional string commit_message = 2;

   optional string title = 3;

   repeated string label = 4;
};

message Campaign {
  // Name of the campaign
  optional string name = 1;

  // VCS branch name to use
  optional string branch_name = 2;

  optional MergeProposalConfig merge_proposal = 5;

  // Force building even if the command did not make any changes
  optional bool force_build = 6 [default=false];

  optional bool skip_setup_validation = 10 [default=false];

  optional bool default_empty = 11 [default=false];

  oneof build {
    DebianBuild debian_build = 3;
    GenericBuild generic_build = 4;
  }

  repeated BugTracker bugtracker = 8;

  // Default command, can be overridden on a per-package basis
  optional string command = 9;
}

message GenericBuild {
  optional string chroot = 1;
}

message DebianBuild {
  // Extra distributions to pull in packages from when building
  repeated string extra_build_distribution = 1;

  optional string base_distribution = 3;

  // Optional chroot, if different from that of base_distribution
  optional string chroot = 4;

  // Distribution to target when building
  optional string build_distribution = 6;

  // Suffix to add to version in changelog on build
  optional string build_suffix = 7;

  optional string build_command = 8;
};

message OAuth2Provider {
  optional string client_id = 1;
  optional string client_secret = 2;

  // Used for finding e.g. token and authorize URLs
  optional string base_url = 3;

  // Name of the OpenID group for QA reviewers
  optional string qa_reviewer_group = 4;

  // Name of the OpenID group for admins
  optional string admin_group = 5;
};

enum BugTrackerKind {
   gitlab = 1;
   debian = 2;
   github = 3;
};

message BugTracker {
   optional BugTrackerKind kind = 1;

   // URL to the project in the bugtracker
   optional string url = 2;

   optional string name = 3;
};

message Select {
    optional string campaign = 1;
};

message AptRepository {
    optional string name = 1;
    optional string base = 3;
    repeated Select select = 2;

    // Human-readable description of the archive used in
    optional string description = 5;
};
